ingress/nginx/nginx-https-ingress/ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tls-example-ingress
  namespace: ingress-nginx
spec:
  tls:
  - hosts:
    - sslexample.foo.com
    secretName: nginx-banna-com
  rules:
    - host: nginx.banna.com
      http:
        paths:
        - path: /
          backend:
            serviceName: nginx-service
            servicePort: 80
